Adding a default landing spread

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -77,6 +77,16 @@ p {
   display: flex;
   justify-content: space-around;
 }
+// SVG classes
+.fill-bg {
+  fill: var(--bg);
+}
+.fill-bg-text {
+  fill: var(--bg-text);
+}
+.stroke-bg-text {
+  stroke: var(--bg-text);
+}
 
 // Add this to a <div> to make a bigger line break.
 .big-br {
