--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -21,6 +21,8 @@
 
   --small-font-size: 12px;
   --regular-font-size:  19px;
+  --h1-font-size: 36px;
+  --h2-font-size: 24px;
 }
 
 html {
@@ -33,14 +35,14 @@ html {
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
 }
-input {
+input, textarea {
   font-family: crimsonText;
 }
 
 .page-content {
   background: var(--bg);
   color: var(--bg-text);
-  min-height: 1000vh;
+  min-height: 200vh;
   padding-top: 25px;
 }
 
