--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -70,6 +70,14 @@ h5 {
 p {
   font-size: 19px;
 }
+a {
+  color: var(--link);
+  font-weight: bold;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
 
 button {
   font-family: crimsonText, serif;
@@ -138,4 +146,9 @@ svg:hover .hover-stroke-c1 {
 // Add this to a <div> to make a bigger line break.
 .big-br {
   height: 50px;
+}
+
+// Flickity type container
+.collection-display {
+  display: flex;
 }
