--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -54,6 +54,7 @@ h1, .h1-input input {
   color: var(--bg-text);
   font-weight: bold;
   font-size: var(--h1-font-size);
+  text-align: center;
 }
 h2, .h2-input input{
   text-align: center;
