--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -128,6 +128,9 @@ a, .a {
 .row-wrap {
   flex-flow: row wrap;
 }
+.small-font-size {
+  font-size: var(--small-font-size);
+}
 
 .input-flex-container {
   display: flex;
