--- a/styles/inputs.scss
+++ b/styles/inputs.scss
@@ -1,24 +1,23 @@
 button {
   font-family: crimsonText, serif;
-  background: var(--input);
-  color: var(--input-text2);
-  border: 1px solid var(--input-text2);
+  background: var(--action);
+  color: var(--input-text);
   display: flex;
   align-items: center;
   cursor: pointer;
-  border-radius: 5px;
   font-size: var(--small-font-size);
-  font-weight: bold;
+  border: none;
   padding: 5px 15px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,.5);
 
   // Button icons:
   svg {
-    fill: var(--input-text2);
-    margin: 0px 5px;
+    fill: var(--input-text);
+    margin: 0px;
+    width: var(--small-font-size);
   }
   &:hover {
     color: var(--input-text);
-    border: 1px solid var(--input-text);
     svg {
       fill: var(--input-text);
     }
