--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -41,13 +41,6 @@ input, textarea {
   font-family: crimsonText;
 }
 
-.page-content {
-  background: var(--bg);
-  color: var(--bg-text);
-  min-height: 200vh;
-  padding-top: 25px;
-}
-
 *,
 *:before,
 *:after {
@@ -116,6 +109,8 @@ a, .a {
 .centered {
   text-align: center;
 }
+
+// Flex container classes:
 .flex-container {
   display: flex;
 }
@@ -128,7 +123,13 @@ a, .a {
 .row-wrap {
   flex-flow: row wrap;
 }
+
+
+// Font sizes
 .small-font-size {
+  font-size: var(--small-font-size);
+}
+.small-font {
   font-size: var(--small-font-size);
 }
 
@@ -144,14 +145,9 @@ a, .a {
 .bold, .b {
   font-weight: bold;
 }
-.small-font {
-  font-size: var(--small-font-size);
-}
+
 .byline {
   font-size: var(--small-font-size);
-}
-.centered {
-  text-align: center;
 }
 
 .body {
@@ -178,7 +174,7 @@ a, .a {
 
 
 // Container for pages and page content.
-.container {
+.body {
   width: 100%;
   min-height: 100vh;
   background: var(--bg);
