More features on canvas editor

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -120,6 +120,9 @@ a, .a {
 .space-between {
   justify-content: space-between;
 }
+.align-center {
+  align-items: center;
+}
 .row-wrap {
   flex-flow: row wrap;
 }
