--- a/styles/inputs.scss
+++ b/styles/inputs.scss
@@ -1,5 +1,21 @@
 
 
+:root {
+  --very-small-font-size: 10px;
+  --small-font-size: 14px;
+  --regular-font-size:  19px;
+  --h1-font-size: 36px;
+  --h2-font-size: 18px;
+  --h3-font-size: 24px;
+}
+
+
+
+
+input, textarea {
+  font-family: crimsonText;
+}
+
 // Applies to all button tags
 button {
   font-family: crimsonText, serif;
