Major updates to colro picker

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,7 +12,7 @@ $tablet-bp: 400px;
 @import '@/styles/layouts.scss';
 @import '@/styles/inputs.scss';
 @import '@/styles/svg-classes.scss';
-// @import '@/styles/transitions.scss';
+@import '@/styles/transitions.scss';
 
 
 // Global vars:
