Added DB tables to the debug menu

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -77,6 +77,12 @@ html {
   flex-flow: row wrap;
 }
 
+.margin-top {
+  margin-top: 10px;
+}
+.margin-bottom {
+  margin-bottom: 10px;
+}
 
 // Font sizes
 .very-small-font {
