--- a/styles/layouts.scss
+++ b/styles/layouts.scss
@@ -15,7 +15,7 @@ To use:
 @import '@/styles/style_components/project-display.scss';
 
 // Any root level components should probably have this. 
-.body {
+.content {
   background: var(--bg);
   color: var(--bg-text);
   display: flex;
@@ -23,10 +23,10 @@ To use:
 }
 
 // 2 column content, like the text of an article. Note that it's an id - there should only be one per page.
-.content {
+.body {
   width: 100%;
   max-width: 600px;
-
+  min-height: 100vh;
   margin-right: auto;
   margin-left: auto;
   padding: 20px 20px; // Making the total width 640!
@@ -39,5 +39,6 @@ To use:
 
 .full-page {
   width: 100%;
+  min-height: 100vh;
 }
 
