Started using sans serif fonts (long overdue tbh)

--- a/styles/text.scss
+++ b/styles/text.scss
@@ -8,9 +8,18 @@
   src: url('../assets/fonts/CrimsonText-Regular.ttf');
 }
 
+@font-face {
+  font-family: inconsolata;
+  src: url('../assets/fonts/Inconsolata-Variable.ttf');
+}
+
 html {
   font-family: crimsonText, serif;
   font-size: var(--regular-font-size);
+}
+
+.card {
+  font-family: inconsolata;
 }
 
 // Headers:
