--- a/styles/text.scss
+++ b/styles/text.scss
@@ -13,6 +13,10 @@
   src: url('../assets/fonts/Inconsolata-Variable.ttf');
 }
 
+.inconsolata {
+  font-family: inconsolata;
+}
+
 html {
   font-family: crimsonText, serif;
   font-size: var(--regular-font-size);
